--- a/client/src/views/CreatePageStudent/CreatePageStudent.css
+++ b/client/src/views/CreatePageStudent/CreatePageStudent.css
@@ -105,6 +105,16 @@
   cursor: not-allowed;
 }
 
+.CreatePageStudent .relative {
+  position: relative;
+}
+.CreatePageStudent .absolute {
+  position: absolute;
+  right: 10px;
+  top: 30px;
+  cursor: pointer;
+}
+
 @media (max-width: 991px) {
   .CreatePageStudent form {
     flex-direction: column;
