--- a/client/src/views/Login/Login.css
+++ b/client/src/views/Login/Login.css
@@ -114,6 +114,16 @@
   cursor: not-allowed;
 }
 
+.Login .relative {
+  position: relative;
+}
+.Login .absolute {
+  position: absolute;
+  right: 10px;
+  top: 30px;
+  cursor: pointer;
+}
+
 @media (max-width: 991px) {
   .Login form {
     flex-direction: column;
