--- a/client/src/views/CreatePageInstructor/CreatePageInstructor.css
+++ b/client/src/views/CreatePageInstructor/CreatePageInstructor.css
@@ -86,6 +86,7 @@
   color: white;
   font-size: 1rem;
   border-radius: 5px;
+  cursor: pointer;
 }
 .CreatePageInstructor .validate_form {
   display: flex;
@@ -111,9 +112,15 @@
 .CreatePageInstructor .absolute {
   position: absolute;
   right: 10px;
-  top: 30px;
+  top: 13px;
   cursor: pointer;
 }
+.CreatePageInstructor .infos-pwd {
+  font-size: 0.8rem;
+  color: gray;
+  font-style: italic;
+}
+
 
 @media (max-width: 991px) {
   .CreatePageInstructor form {
