--- a/client/src/views/RegisterInstructor/RegisterInstructor.css
+++ b/client/src/views/RegisterInstructor/RegisterInstructor.css
@@ -119,8 +119,13 @@
 .RegisterInstructor .absolute {
   position: absolute;
   right: 10px;
-  top: 30px;
+  top: 13px;
   cursor: pointer;
+}
+.RegisterInstructor .infos-pwd {
+  font-size: 0.8rem;
+  color: gray;
+  font-style: italic;
 }
 
 @media (max-width: 991px) {
