--- a/client/src/views/RegisterStudent/RegisterStudent.css
+++ b/client/src/views/RegisterStudent/RegisterStudent.css
@@ -125,8 +125,13 @@
 .RegisterStudent .absolute {
   position: absolute;
   right: 10px;
-  top: 30px;
+  top: 13px;
   cursor: pointer;
+}
+.RegisterStudent .infos-pwd {
+  font-size: 0.8rem;
+  color: gray;
+  font-style: italic;
 }
 
 @media (max-width: 991px) {
