fix change pswd

--- a/client/src/views/UpdatePageInstructorPassword/UpdatePageInstructorPassword.css
+++ b/client/src/views/UpdatePageInstructorPassword/UpdatePageInstructorPassword.css
@@ -25,6 +25,8 @@
   .UpdatePageInstructorPassword .error-text {
     color: var(--oranges);
     display: block;
+    padding-left: 19px;
+    padding-right: 6px;
   }
   
   .UpdatePageInstructorPassword form {
