--- a/client/src/views/AdminDashboard/AdminDashboard.css
+++ b/client/src/views/AdminDashboard/AdminDashboard.css
@@ -268,6 +268,8 @@ body {
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
   grid-template-rows: 1fr 16fr;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .AdminDashboard .details .cardHeader {
@@ -355,6 +357,9 @@ body {
   border: none;
   width: 64px;
 }
+.AdminDashboard .pl-x {
+  padding-left: 67px;
+ }
 
 @media (max-width: 991px) {
   .AdminDashboard .navigation {
