--- a/client/src/views/StudentDashboard/StudentDashboard.css
+++ b/client/src/views/StudentDashboard/StudentDashboard.css
@@ -227,6 +227,8 @@
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
   grid-template-rows: 1fr 16fr;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .StudentDashboard .details .cardHeader {
@@ -314,6 +316,9 @@
   border: none;
   width: 64px;
 }
+.StudentDashboard .pl-x {
+  padding-left: 67px;
+ }
 
 @media (max-width: 991px) {
   .StudentDashboard .navigation {
