--- a/client/src/views/AdminDashboard/AdminDashboard.css
+++ b/client/src/views/AdminDashboard/AdminDashboard.css
@@ -86,9 +86,9 @@ body {
 .AdminDashboard .navigation ul li:nth-child(1) {
   margin-bottom: 40px;
   pointer-events: none;
-  font-style: italic;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-weight: 100 !important;
+  /* font-style: italic;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+  font-weight: 100 !important; */
 }
 
 .AdminDashboard .navigation ul li a {
